--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,15 +3,15 @@
 
 
 // If need, change your variables before importing Bulma
-// $title-color: #ff0000;
+$title-color: hsl(0, 0%, 9%);
 
 @import "~bulma/bulma.sass";
 
 body {
-    // background-image: linear-gradient(20deg, #4f4a43, #8da4f2);
+    background-image: linear-gradient(20deg, #4f4a43, #8da4f2);
     
     // gradient test 
-    // background: linear-gradient(20deg, rgba(18,12,85,0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0,212,255,0.05) 100%),
+    // background: linear-gradient(20deg, rgba(18, 12, 85, 0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0, 212, 255, 0.05) 100%),
     // linear-gradient(90deg, rgb(62, 70, 88) 0%, rgb(131, 137, 156) 35%, rgb(156, 169, 172) 100%);
 }
 
@@ -101,4 +101,10 @@ h2{
 }
 #footer div{
     display:block
+}
+.container {
+    // font-weight: bold;
+}
+nav.navbar {
+    background-color: rgba(216, 220, 255, 0)
 }
