--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,10 +7,10 @@ $title-color: hsl(0, 0%, 9%);
 
 @import "~bulma/bulma.sass";
 
-body {
-    background-image: radial-gradient(circle, #15181a20 50%, #5f9bf510 75%, #22242c10 900%),
-    linear-gradient(20deg, #2b3136, #8da4f2);
-    
+html {
+    background-image: radial-gradient(circle, #0b8d9620 50%, #07686321 75%, #22242c1f 900%),
+    linear-gradient(20deg, #22303bf1, #525f8a);
+    background-attachment: fixed;
     // gradient test 
     // background: linear-gradient(20deg, rgba(18, 12, 85, 0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0, 212, 255, 0.05) 100%),
     // linear-gradient(90deg, rgb(62, 70, 88) 0%, rgb(131, 137, 156) 35%, rgb(156, 169, 172) 100%);
