updated bg coloring/changed from node-sass to sass

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,8 +8,8 @@ $title-color: hsl(0, 0%, 9%);
 @import "~bulma/bulma.sass";
 
 html {
-    background-image: radial-gradient(circle, #0b8d9620 50%, #07686321 75%, #22242c1f 900%),
-    linear-gradient(20deg, #22303bf1, #525f8a);
+    background-image: radial-gradient(circle, #0f72e420 50%, #1083ee21 75%, #b0bbe61f 900%),
+    linear-gradient(20deg, #707175f1, #5e5f64);
     background-attachment: fixed;
     // gradient test 
     // background: linear-gradient(20deg, rgba(18, 12, 85, 0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0, 212, 255, 0.05) 100%),
