--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,9 +8,10 @@
 @import "~bulma/bulma.sass";
 
 html {
-    background-image: radial-gradient(circle, #0f72e420 50%, #1083ee21 75%, #b0bbe61f 900%),
-    linear-gradient(20deg, #707175f1, #5e5f64);
-    background-attachment: fixed;
+    // background-image: radial-gradient(circle, #0f72e420 50%, #1083ee21 75%, #b0bbe61f 900%),
+    // linear-gradient(20deg, #707175f1, #5e5f64);
+    // background-attachment: fixed;
+    background-color: rgb(24, 24, 24);
     // gradient test 
     // background: linear-gradient(20deg, rgba(18, 12, 85, 0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0, 212, 255, 0.05) 100%),
     // linear-gradient(90deg, rgb(62, 70, 88) 0%, rgb(131, 137, 156) 35%, rgb(156, 169, 172) 100%);
@@ -70,7 +71,7 @@ input.htCheckboxRendererInput{
     min-height:10px;
 }
 .logo{
-    color: #0F0F0F;
+    color: #3852e6;
 }
 .title {
     color: #3852e6ec;
@@ -115,5 +116,5 @@ nav.navbar {
 }
 // for the input/output text
 .subtitle {
-    color: black;
+    color: rgb(75, 105, 240);
 }
