--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -118,3 +118,9 @@ nav.navbar {
 .subtitle {
     color: rgb(75, 105, 240);
 }
+.button {
+    background-color: rgb(46, 59, 75);
+    //outlined border red
+    border: solid rgb(99, 224, 255) 1px;
+    color: rgb(99, 224, 255);
+}
