--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,4 @@
-
 @charset "utf-8";
-
 
 // If need, change your variables before importing Bulma
 // $title-color: hsl(0, 0%, 9%);
@@ -8,119 +6,131 @@
 @import "~bulma/bulma.sass";
 
 html {
-    // background-image: radial-gradient(circle, #0f72e420 50%, #1083ee21 75%, #b0bbe61f 900%),
-    // linear-gradient(20deg, #707175f1, #5e5f64);
-    // background-attachment: fixed;
-    background-color: rgb(27, 30, 36);
-    // gradient test 
-    // background: linear-gradient(20deg, rgba(18, 12, 85, 0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0, 212, 255, 0.05) 100%),
-    // linear-gradient(90deg, rgb(62, 70, 88) 0%, rgb(131, 137, 156) 35%, rgb(156, 169, 172) 100%);
+  // background-image: radial-gradient(circle, #0f72e420 50%, #1083ee21 75%, #b0bbe61f 900%),
+  // linear-gradient(20deg, #707175f1, #5e5f64);
+  // background-attachment: fixed;
+  background-color: rgb(27, 30, 36);
+  // gradient test
+  // background: linear-gradient(20deg, rgba(18, 12, 85, 0.05) 0%, rgba(108, 124, 167, 0.85) 20%, rgba(86, 114, 128, 0.75) 65%, rgba(0, 212, 255, 0.05) 100%),
+  // linear-gradient(90deg, rgb(62, 70, 88) 0%, rgb(131, 137, 156) 35%, rgb(156, 169, 172) 100%);
 }
 
-textarea.bullets{
-
-    height: 200px;
-    white-space: pre-line;
-    text-indent: 0px;
-    overflow: hidden;
-    border: none;
-    resize: none;
-    /*word-break: break-all;*/
+textarea.bullets {
+  height: 200px;
+  white-space: pre-line;
+  text-indent: 0px;
+  overflow: hidden;
+  border: none;
+  resize: none;
+  /*word-break: break-all;*/
 }
-.border{
-    width:fit-content;
-    border: solid black 1.1px;
-    background-image: linear-gradient(10deg, #8ca2cc, rgb(142, 169, 219));
-  
+.border {
+  width: fit-content;
+  border: solid black 1.1px;
+  background-image: linear-gradient(10deg, #8ca2cc, rgb(142, 169, 219));
 }
-.bulletContainer{
-    margin:10px 10px 0px 0px;
+.bulletContainer {
+  margin: 10px 10px 0px 0px;
 }
-.bullets{
-    //font-family: "AdobeTimes";
-    font-family: 'Times New Roman'; 
-    font-size: 12pt;
-    display:inline;
-    font-kerning:none;
-    text-rendering: geometricPrecision;
+.bullets {
+  //font-family: "AdobeTimes";
+  font-family: "Times New Roman";
+  font-size: 12pt;
+  display: inline;
+  font-kerning: none;
+  text-rendering: geometricPrecision;
 }
-input.htCheckboxRendererInput{
-    margin: 2px auto!important;
-    display:block!important;
+input.htCheckboxRendererInput {
+  margin: 2px auto !important;
+  display: block !important;
 }
-#thesaurus{
-    padding: 10px;
-    margin:10px 10px 0px 0px;
-    width: unset;
+#thesaurus {
+  padding: 10px;
+  margin: 10px 10px 0px 0px;
+  width: unset;
 }
 #thesaurus > ul {
-    columns:10;
-    list-style-type:circle;
-    margin: 5px auto;
+  columns: 10;
+  list-style-type: circle;
+  margin: 5px auto;
 }
 
 #thesaurus > ul > li {
-    margin:auto 5px;
+  margin: auto 5px;
 }
 
-
-#abbrTable{
-    margin:10px 10px 0px 0px;
+#abbrTable {
+  margin: 10px 10px 0px 0px;
 }
-#bulletIOWrapper{
-    min-height:10px;
+#bulletIOWrapper {
+  min-height: 10px;
 }
-.logo{
-    color: #3852e6;
+.logo {
+  color: #3852e6;
 }
 .title {
-    color: #3852e6ec;
+  color: #3852e6ec;
 }
-h1{
-    font-family:monospace;
+h1 {
+  font-family: monospace;
 }
-h2{
-    font-family: monospace;
+h2 {
+  font-family: monospace;
 }
 
-#topStuff{
-    /*position: fixed;
+#topStuff {
+  /*position: fixed;
     top: 0;
     width: 100%;
     margin-right:10px;*/
-    background-color: white;
+  background-color: white;
 }
 
-.toolbox{
-    display:inherit;
+.toolbox {
+  display: inherit;
 }
 
-.toolbox button{
-    margin:5px;
+.toolbox button {
+  margin: 5px;
 }
 
-#footer{
-    text-align:center;
-    font-size:12px;
-    color:grey;
+#footer {
+  text-align: center;
+  font-size: 12px;
+  color: grey;
 }
-#footer div{
-    display:block
+#footer div {
+  display: block;
 }
 .container {
-    // font-weight: bold;
+  // font-weight: bold;
 }
 // background color for buttons
 nav.navbar {
-    background-color: rgba(216, 220, 255, 0)
+  background-color: rgba(216, 220, 255, 0);
 }
 // for the input/output text
 .subtitle {
-    color: rgb(75, 105, 240);
+  color: rgb(75, 105, 240);
 }
 .button {
-    background-color: rgb(46, 59, 75);
-    //outlined border red
-    border: solid rgb(99, 224, 255) 1px;
-    color: rgb(99, 224, 255);
+  background-color: rgb(46, 59, 75);
+  //outlined border red
+  border: solid rgb(99, 224, 255) 1px;
+  color: rgb(99, 224, 255);
+}
+.button:active {
+  background-color: rgb(35, 44, 44);
+  color: rgb(92, 236, 255);
+  border: rgb(126, 224, 241);
+}
+.button:visited {
+  background-color: rgb(46, 59, 75);
+  color: rgb(99, 224, 255);
+  border: 1px solid rgb(126, 208, 241);
+}
+.button:hover {
+  background-color: rgb(30, 38, 41);
+  color: rgb(92, 236, 255);
+  border: 1px solid rgb(126, 208, 241);
 }
